--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 #panel {
   width: 310px;
-  height: 340px;
+  height: 300px;
   overflow: hidden;
 }
 
 .card {
   width: 60px;
-  height: 80px;
-  line-height: 80px;
+  height: 60px;
+  line-height: 60px;
   border: 1px solid silver;
   border-radius: 10px;
   text-align: center;
@@ -18,6 +18,11 @@
   float: left;
   cursor: pointer;
 }
+
+.save_alf{
+  margin-bottom: 20px;
+}
+
 /* 裏の状態 */
 .back {
   /* background-image: url('img/back.png'); */
@@ -32,4 +37,8 @@
 #result {
   font-size: 1.2em;
   font-weight: bold;
+}
+
+.dic_disp{
+  margin-top: 220px;
 }
